# roe-ai-take-home

./: README.md
backend/: .env.template  .gitignore  main.py  pyproject.toml  requirements.txt  utils.py
frontend/: package.json
frontend/app/: page.tsx  types.ts
frontend/videochatfrontend/: package.json
